<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.kyad.traystorage.app.auth.ChangePasswordActivity" />
    </data>

    <LinearLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingHorizontal="4dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:onClick="@{()->activity.onBackPressed()}"
                android:padding="12dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back" />

            <com.kyad.traystorage.app.common.font.FontTextView
                style="@style/font_spoqahansansneo_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:includeFontPadding="false"
                android:text="@string/change_password"
                android:textColor="#111111"
                android:textSize="18sp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.kyad.traystorage.app.common.font.FontTextView
                    android:id="@+id/text_intro"
                    style="@style/font_spoqahansansneo_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:includeFontPadding="false"
                    android:lineHeight="34dp"
                    android:text="@string/change_password1"
                    android:textColor="#111111"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:orientation="vertical">

                    <com.kyad.traystorage.app.common.font.FontTextView
                        style="@style/font_spoqahansansneo_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/password"
                        android:textColor="#535455"
                        android:textSize="14sp" />

                    <com.kyad.traystorage.app.common.font.FontEditText
                        android:id="@+id/edit_password"
                        style="@style/font_spoqahansansneo_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/password_hint"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:onTextChanged="@{()->activity.onValidate()}"
                        android:paddingVertical="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="#6B6C6E"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/line_password"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/light_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:orientation="vertical">

                    <com.kyad.traystorage.app.common.font.FontTextView
                        style="@style/font_spoqahansansneo_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/password_confirm"
                        android:textColor="#535455"
                        android:textSize="14sp" />

                    <com.kyad.traystorage.app.common.font.FontEditText
                        android:id="@+id/edit_password2"
                        style="@style/font_spoqahansansneo_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/reenter_password"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:onTextChanged="@{()->activity.onValidate()}"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="#6B6C6E"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/line_password2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/light_gray" />
                </LinearLayout>

                <com.kyad.traystorage.app.common.font.FontButton
                    android:id="@+id/next_btn"
                    style="@style/font_spoqahansansneo_bold"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_btn_approve_both"
                    android:enabled="@{activity.isEnabled}"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:onClick="@{()->activity.onConfirm()}"
                    android:text="@string/confirm"
                    android:textColor="@{activity.isEnabled?@color/white:@color/gray}"
                    android:textSize="20sp" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</layout>