<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.kyad.traystorage.app.main.NFCRegisterActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.kyad.traystorage.app.common.font.FontTextView
                style="@style/font_spoqahansansneo_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/nfc_register"
                android:textColor="@color/C151515"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/ib_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{()->activity.onBackPressed()}"
                android:padding="15dp"
                android:src="@drawable/ic_back"
                android:visibility="invisible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="18dp"
            android:paddingTop="54dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_nfc_150" />

            <com.kyad.traystorage.app.common.font.FontTextView
                style="@style/font_spoqahansansneo_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineHeight="34dp"
                android:paddingTop="20dp"
                android:text="@string/nfc_content1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <com.kyad.traystorage.app.common.font.FontTextView
                style="@style/font_spoqahansansneo_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineHeight="34dp"
                android:paddingTop="20dp"
                android:text="@string/nfc_content2"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.kyad.traystorage.app.common.font.FontButton
                android:id="@+id/next_btn"
                style="@style/font_spoqahansansneo_bold"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_btn_cancel10"
                android:enabled="true"
                android:gravity="center"
                android:onClick="@{()->activity.onCancelClick()}"
                android:text="@string/cancel"
                android:textColor="@color/focus_color"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

</layout>